- 0.8.8
	* Skip rules filter processing for cache when deactivated
	* Add match-all flag to rule processing
	* Add match-all flag to CLI to toggle setting match_all flag to rule processing for include criteria
- 0.8.7
	* Upgrade chainsyncer (and shep) to avoid state deletion on partial filter list interrupts
- 0.8.6
	* Handle crash on conrtact creation when recipient filter is active
- 0.8.5
	* Instantiate constructor for chain interface superclass
	* Remove unused settings transform method for sync interface
- 0.8.4
	* Update man pages with rpc batch limit setting
- 0.8.3
	* Update man pages
- 0.8.2
	* Handle undefined content-key argument
- 0.8.1
	* Implement syncer context
	* Add key-value parameter for cli, environment, config to pass to syncer context
- 0.8.0
	* Implement RPC batch limits for syncer
- 0.7.6
	* Make rpc dialect work with chain interface
- 0.7.5
	* Add readme (from man page)
	* Add package descriptino (from man page)
- 0.7.4
	* Add man pages to package
- 0.7.3
	* Upgrade deps
- 0.7.2
	* Fix tx index in default output for sync command
- 0.7.1
	* Change license to AGPL3 and copyright waived to public domain
	* Add missing log module in cli lib
- 0.7.0
	* Reactivate cache rpc
	* Upgrade dependencies
- 0.6.0
	* Allow missing filters in arugments
- 0.5.1
	* Remove useless need to add session dir for mem backend
	* Reenable renderers and filters specified through args in new settings setup
- 0.5.0
	* Implement on chainlib 0.3.0
- 0.4.8
	* Upgrade chainlib to 0.2.0
- 0.4.5
	* Upgrade chainsyncer
- 0.4.4
	* Upgrade deps	
- 0.4.3
	* Upgrade deps	
- 0.4.2
	* Implement non-persistent (in-memory) sync state
- 0.4.1
	* Correct too restrictive python version constraint
- 0.4.0
	* Add rocksdb backend
- 0.3.3
	* Upgrade chainsyncer to shep 0.2.0
- 0.3.2
	* Add data-in filter
- 0.3.1
	* Add data filter
- 0.3.0
	* Reimplement on shep/chainsyncer 0.3.0
- 0.2.1
	* Implement --keep-alive flag
- 0.2.0
	* Dependency upgrades
- 0.1.0
	* Read blocks, tx, rcpt from cache