@@ -1,6 +1,6 @@
 [metadata]
 name = eth-monitor
-version = 0.8.7
+version = 0.8.8
 description = Monitor and cache transactions using match filters
 author = Louis Holbrook
 author_email = dev@holbrook.no
